# cmake-bare

./: .gitignore  README.md  bare-config.cmake  bare.cmake  bundle.js  cmake-bare.cmake  delay-load.c  dependencies.js  include-directories.js  mirror.js  package.json
test/fixtures/addon/: package.json
test/fixtures/dependent-addon/a/: CMakeLists.txt  binding.c  package.json
test/fixtures/dependent-addon/b/: package.json
test/fixtures/runtime-dependency/: CMakeLists.txt  foo.c  package.json
test/fixtures/scoped-addon/: package.json
win32/: delay-load.c
